name: Flex
version: 0.0.1
cabal-version: >= 1.10
build-type: Simple
license: LGPL-3
license-file: LICENSE
copyright: (c) 2024 Marcel Schütz
author: Marcel Schütz
stability: experimental
homepage: https://github.com/McEarl/FLex
bug-reports: https://github.com/McEarl/FLex/issues
category: ForTheL, CNL, Lexing
synopsis: A generic ForTheL lexer
description:
  This is a library that provides an abstract ForTheL lexer that is independent
  of concrete character encodings, position types, syntax highlighting
  specifications etc. and can thus be used as a generic basis for a wide range
  of ForTheL parsing frameworks.
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/McEarl/FLex.git
  branch: main

library
  exposed-modules:
    Flex.Default
    Flex.Lexer
  other-modules:
    Flex.Base
    Flex.CatCode
    Flex.Error
    Flex.Message
    Flex.Position
  build-depends:
    base >= 4.19.1.0,
    basement >= 0.0.16,
    containers >= 0.6.8,
    megaparsec >= 9.6.1,
    mtl >= 2.3.1,
    text >= 2.1.1,
    transformers >= 0.6.1.0
--  hs-source-dirs:
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -O2
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-unused-matches
    -fno-warn-name-shadowing
  default-language: Haskell2010
